--- a/about-us.html
+++ b/about-us.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="../assets/css/font/all.min.css">
   <link rel='stylesheet'
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-  <link rel="stylesheet" href="../assets/css/font/fontawesome.min.css">
-  <link rel="stylesheet" href="../assets/css/main.min.css">
-  <link rel="stylesheet" href="../assets/css/pages/about-us.css">
+  <link rel="stylesheet" href="assets/css/font/fontawesome.min.css">
+  <link rel="stylesheet" href="assets/css/main.min.css">
+  <link rel="stylesheet" href=".assets/css/pages/about-us.css">
   <!-- plugins -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <title>About Us </title>
