--- a/business-setup.html
+++ b/business-setup.html
@@ -440,7 +440,6 @@
               <button class="submit">
                 <img src="assets/images/w-arrow.svg" alt="" srcset="">
               </button>
-
             </form>
           </div>
         </div>
@@ -451,10 +450,10 @@
             <div class="menu-items opener open">
               <h4 class="ttl menu-title">Company</h4>
               <ul class="toggle">
-                <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Faq</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/about-us">About</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/faq">Faq</a></li>
+                <li><a href="/contact">Contact</a></li>
               </ul>
 
             </div>
@@ -467,7 +466,7 @@
               </ul>
             </div> -->
             <div class="menu-items opener">
-              <h4 class="ttl menu-title">Services</h4>
+              <h4 class="ttl menu-title">Business Setup</h4>
               <ul class="toggle">
                 <li><a href="/minland">Minland</a></li>
                 <li><a href="/freezone">Freezone</a></li>
