--- a/business-setup/minland.html
+++ b/business-setup/minland.html
@@ -540,7 +540,6 @@
               <button class="submit">
                 <img src="assets/images/w-arrow.svg" alt="" srcset="">
               </button>
-
             </form>
           </div>
         </div>
@@ -551,10 +550,10 @@
             <div class="menu-items opener open">
               <h4 class="ttl menu-title">Company</h4>
               <ul class="toggle">
-                <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Faq</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/about-us">About</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/faq">Faq</a></li>
+                <li><a href="/contact">Contact</a></li>
               </ul>
 
             </div>
@@ -567,11 +566,11 @@
               </ul>
             </div> -->
             <div class="menu-items opener">
-              <h4 class="ttl menu-title">Services</h4>
+              <h4 class="ttl menu-title">Business Setup</h4>
               <ul class="toggle">
-                <li><a href="" class="">servi 1</a></li>
-                <li><a href="">servi 2</a></li>
-                <li><a href="">servi 3</a></li>
+                <li><a href="/minland">Minland</a></li>
+                <li><a href="/freezone">Freezone</a></li>
+                <li><a href="/offshore">Offshore</a></li>
               </ul>
             </div>
             <div class="menu-items">
