--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 <body>
 
   <header class="main-header">
-    <div class="header-container h-100 d-flx flx-vcenter">
+    <div class="top-header">
+      <div class="header-container d-flex justify-content-end">
+        <a href="mailto:jinto@create-biz.com"><i class="fa-solid fa-envelope"></i>jinto@create-biz.com</a>
+        <a href="tel:+971555393936"><i class="fa-solid fa-phone"></i>+971555393936</a>
+      </div>
+    </div>
+    <div class="header-container d-flx flx-vcenter">
       <div class="logo">
         <a href="/">
           <img src="assets/images/CreateBiz.png" alt="">
@@ -42,14 +48,8 @@
             </li>
             <li><a href="affiliated-services.html">Affiliated Services</a></li>
             <li><a href="about-us.html">About</a></li>
-            <li><a href="">Resources</a>
-              <ul>
-                <li><a href="blog.html">Blog</a>
-
-                </li>
-                <li><a href="faq.html">FAQ</a></li>
-
-              </ul>
+            <li><a href="blog.html">Blog</a>
+             
             </li>
 
             <li><a href="contact.html">Contact</a></li>
@@ -114,14 +114,14 @@
                   <div class="flip-card-back">
                     <h4 class="title">Minland</h4>
                     <p>Package includes</p>
-                    <ul>
+                    <ol>
                       <li>Business License</li>
                       <li>Investor Visa</li>
                       <li>Memorandum of Association</li>
                       <li>Name & Initial Approval</li>
                       <li>Local Service Agent</li>
-                    </ul>
-                    <a href="" class="btn btn-primary">Get the offer</a>
+                    </ol>
+                    <a href="" class="btn btn-primary">Get me started</a>
                   </div>
                 </div>
               </div>
@@ -137,14 +137,14 @@
                   <div class="flip-card-back">
                     <h4 class="title">Freezone</h4>
                     <p>Package includes</p>
-                    <ul>
+                    <ol>
                       <li>Business License</li>
                       <li>Investor Visa</li>
                       <li>Memorandum of Association</li>
                       <li>Name & Initial Approval</li>
                       <li>Local Service Agent</li>
-                    </ul>
-                    <a href="" class="btn btn-primary">Get the offer</a>
+                    </ol>
+                    <a href="" class="btn btn-primary">Get me started</a>
                   </div>
                 </div>
               </div>
@@ -160,14 +160,14 @@
                   <div class="flip-card-back">
                     <h4 class="title">Offshore</h4>
                     <p>Package includes</p>
-                    <ul>
+                    <ol>
                       <li>Business License</li>
                       <li>Investor Visa</li>
                       <li>Memorandum of Association</li>
                       <li>Name & Initial Approval</li>
                       <li>Local Service Agent</li>
-                    </ul>
-                    <a href="" class="btn btn-primary">Get the offer</a>
+                    </ol>
+                    <a href="" class="btn btn-primary">Get me started</a>
                   </div>
                 </div>
               </div>
@@ -368,6 +368,55 @@
                   </h4>
                 </div>
               </div>
+              <a href="" class="btn btn-primary">
+                <span>Know More</span>
+                <span class="arrow"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="home-blog">
+      <div class="container">
+        <h2 class="ttl ttl-40 title">Our Blog
+        </h2>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="card">
+              <div class="pill">15 july, 2024</div>
+              <figure>
+                <img src="/assets/images/blog.jpg" alt="blog">
+              </figure> 
+              <div class="card-footer">
+                <p>The for fully had she there leave merit enjoy forth.</p>
+                <p>By John</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <div class="pill">15 july, 2024</div>
+              <figure>
+                <img src="/assets/images/blog.jpg" alt="blog">
+              </figure>
+              <div class="card-footer">
+                <p>The for fully had she there leave merit enjoy forth.</p>
+                <p>By John</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <div class="pill">15 july, 2024</div>
+              <figure>
+                <img src="/assets/images/blog.jpg" alt="blog">
+              </figure>
+              <div class="card-footer">
+                <p>The for fully had she there leave merit enjoy forth.</p>
+                <p>By John</p>
+              </div>
             </div>
           </div>
         </div>
@@ -447,6 +496,8 @@
         </a>
       </div>
     </section>
+
+   
 
 
   </main>
