--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="stylesheet" href="assets/css/font/fontawesome.min.css">
   <link rel="stylesheet" href="assets/css/main.min.css">
-  <link rel="stylesheet" href=".assets/css/pages/about-us.css">
+  <link rel="stylesheet" href="assets/css/pages/about-us.css">
   <!-- plugins -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <title>About Us </title>
@@ -20,41 +20,41 @@
 <body>
 
   <header class="main-header">
-    <div class="header-container h-100 d-flx flx-vcenter">
+    <div class="top-header">
+      <div class="header-container d-flex justify-content-end">
+        <a href="mailto:jinto@create-biz.com"><i class="fa-solid fa-envelope"></i>jinto@create-biz.com</a>
+        <a href="tel:+971555393936"><i class="fa-solid fa-phone"></i>+971555393936</a>
+      </div>
+    </div>
+    <div class="header-container d-flx flx-vcenter">
       <div class="logo">
         <a href="/">
-          <img src="../assets/images/CreateBiz.png" alt="">
+          <img src="assets/images/CreateBiz.png" alt="">
         </a>
       </div>
       <div class="header-right ml-auto d-flx flx-vcenter">
         <nav class="main-nav">
-            <ul>
-              <li><a class="active" href="/">Home</a></li>
-              <li><a href="business-setup.html">Business Setup</a>
-                <ul>
-                  <li><a href="business-setup/minland.html">Minland </a>
-  
-                  </li>
-                  <li><a href="business-setup/freezone.html">Freezone</a></li>
-                  <li><a href="business-setup/offshore.html">Offshore</a></li>
-  
-                </ul>
-              </li>
-              <li><a href="affiliated-services.html">Affiliated Services</a></li>
-              <li><a href="about-us.html">About</a></li>
-              <li><a href="">Resources</a>
-                <ul>
-                  <li><a href="blog.html">Blog</a>
-  
-                  </li>
-                  <li><a href="faq.html">FAQ</a></li>
-  
-                </ul>
-              </li>
-  
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
+          <ul>
+            <li><a class="active" href="/">Home</a></li>
+            <li><a href="business-setup.html">Business Setup</a>
+              <ul>
+                <li><a href="business-setup/minland.html">Minland </a>
+
+                </li>
+                <li><a href="business-setup/freezone.html">Freezone</a></li>
+                <li><a href="business-setup/offshore.html">Offshore</a></li>
+
+              </ul>
+            </li>
+            <li><a href="affiliated-services.html">Affiliated Services</a></li>
+            <li><a href="about-us.html">About</a></li>
+            <li><a href="blog.html">Blog</a>
+             
+            </li>
+
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
     <div class="mob-btn">
@@ -65,7 +65,7 @@
     <div class="overlay"></div>
   </header>
 
-  <main class="about-page">
+  <main class="inner-page">
 
     <!------------banner----------------->
     <section class="inner-banner">
@@ -115,7 +115,15 @@
                     <h4 class="ttl ttl-18 sub-title">About Us</h4>
                     <h2 class="ttl ttl-40 title">Who We Are
                     </h2>
-                    <p>Talking justice welcome message inquiry in started of am me. Led own hearted highest visited lasting sir through compass his. Guest tiled he quick by so these trees am.</p>
+                    <p>Createbiz provides comprehensive business solutions for all
+                      enterprises. Leverage our business setup expertise to commence
+                      operations and achieve sustainable growth.
+                      </p>
+                      <p>With over 15 years of experience in the field, we have what it
+                        takes to ensure your success. Unlock your business potential in
+                        the UAE and grab the opportunities provided by a dynamic
+                        economy.
+                        </p>
                     <div class="content-inner">
                         <a href="https://www.youtube.com/watch?v=owhuBrGIOsE" class="popup-youtube theme video-play-button item-center">
                             <i class="fa fa-play"></i>
@@ -146,6 +154,110 @@
     </section>
 
 
+    <section class="about-choose">
+       <div class="container">
+        <h2 class="ttl ttl-40 title">Experience Our Platforms Yourself
+        </h2>
+        <p>lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id ne cogitari quidem potest quale sit, ut
+          non repugnet ipsum sibi.
+          </p>
+          <div class="choose-list">
+            <div class="row">
+              <div class="col-lg-3">
+                <div class="card">
+                  <p>Client-Centric
+                    Work Environment
+                    </p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="card">
+                  <p>Client-Centric
+                    Work Environment
+                    </p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="card">
+                  <p>Client-Centric
+                    Work Environment
+                    </p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="card">
+                  <p>Client-Centric
+                    Work Environment
+                    </p>
+                </div>
+              </div>
+            </div>
+          </div>
+       </div>
+    </section>
+
+    <section class="team">
+       <div class="container">
+        <h2 class="ttl ttl-40 title">Our Team
+        </h2>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="card">
+              <div class="pill"></div>
+              <figure>
+                <img src="" alt="">
+              </figure>
+              <p>Avery Davis </p>
+              <span>MARKETING EXPERT</span>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <div class="pill"></div>
+              <figure>
+                <img src="" alt="">
+              </figure>
+              <p>Avery Davis </p>
+              <span>MARKETING EXPERT</span>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card">
+              <div class="pill"></div>
+              <figure>
+                <img src="" alt="">
+              </figure>
+              <p>Avery Davis </p>
+              <span>MARKETING EXPERT</span>
+            </div>
+          </div>
+        </div>
+       </div>
+    </section>
+
+    <section class="customers">
+      <div class="container">
+        <h2 class="ttl ttl-40 title">Our Customers
+        </h2>
+        <p>The documentation required may vary depending on the jurisdiction and business type. Typically, you will need:
+        </p>
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!------------home contact----------------->
     <section class="home-contact">
@@ -281,7 +393,7 @@
     </div>
   </footer>
 
-  <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Lazyload -->
   <script src="assets/js/vendors/lazyload-all.js" async=""></script>
@@ -293,6 +405,7 @@
  <script type="text/javascript" src="assets/js/animation.gsap.min.js"></script>
  <script type="text/javascript" src="assets/js/animation.js"></script> -->
   <!-- <script type="text/javascript" src="assets/js/popper.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="assets/js/main.js"></script>
   <script>
     function loadJS(u) {
@@ -305,7 +418,7 @@
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
   <!-- pagescript here... -->
 </body>
 
