--- a/about-us.html
+++ b/about-us.html
@@ -69,15 +69,18 @@
 
     <!------------banner----------------->
     <section class="inner-banner">
+      <figure class="figure">
+        <img src="assets/images/about.png" alt="banner">
+      </figure>
         <div class="container">
           <h1 class="ttl ttl-40 title"> Assisting Hassle-free Business Consultancy Services 
         </h1>
           <!-- <p>We denounce with righteous indige nation and dislike men who are so beguiled and demo realized by the charms
             of pleasure of the moment, so blinded by desire.</p> -->
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#formModal">
+          <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#formModal">
           Contact Us
   
-          </button>
+          </button> -->
 
         </div>
       </section>
