--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#013346" />
   <link rel='stylesheet'
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-  <link rel="stylesheet" href="assets/css/main.min.css">
+    <link rel="stylesheet" href="assets/css/main.min.css">
   <link rel="stylesheet" href="assets/css/font/all.min.css">
   <link rel="stylesheet" href="assets/css/font/fontawesome.min.css">
   <link rel="stylesheet" href="assets/css/pages/blog.css">
@@ -20,7 +20,13 @@
 <body>
 
   <header class="main-header">
-    <div class="header-container h-100 d-flx flx-vcenter">
+    <div class="top-header">
+      <div class="header-container d-flex justify-content-end">
+        <a href="mailto:jinto@create-biz.com"><i class="fa-solid fa-envelope"></i>jinto@create-biz.com</a>
+        <a href="tel:+971555393936"><i class="fa-solid fa-phone"></i>+971555393936</a>
+      </div>
+    </div>
+    <div class="header-container d-flx flx-vcenter">
       <div class="logo">
         <a href="/">
           <img src="assets/images/CreateBiz.png" alt="">
@@ -42,16 +48,8 @@
             </li>
             <li><a href="affiliated-services.html">Affiliated Services</a></li>
             <li><a href="about-us.html">About</a></li>
-            <li><a href="">Resources</a>
-              <ul>
-                <li><a href="blog.html">Blog</a>
-
-                </li>
-                <li><a href="faq.html">FAQ</a></li>
-
-              </ul>
+            <li><a href="blog.html">Blog</a>
             </li>
-
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -65,7 +63,7 @@
     <div class="overlay"></div>
   </header>
 
-  <main clas="blog">
+  <main class="inner-page">
     <section class="inner-banner">
         <div class="container">
           <h1 class="ttl ttl-40 title"> Blog
@@ -81,7 +79,119 @@
       </section>
 
       <section class="blog-section">
-
+         <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="pill">15 july, 2024</div>
+                <figure>
+                  <img src="/assets/images/blog.jpg" alt="blog">
+                </figure> 
+                <div class="card-footer">
+                  <p>The for fully had she there leave merit enjoy forth.</p>
+                  <p>By John</p>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+         </div>
       </section>
   </main>
 
