--- a/business-setup/minland.html
+++ b/business-setup/minland.html
@@ -67,6 +67,9 @@
 
     <!------------banner----------------->
     <section class="inner-banner">
+      <figure class="figure">
+        <img src="../assets/images/minland-banner.png" alt="minland-banner">
+      </figure>
         <div class="container">
           <!-- <nav aria-label="breadcrumb" class="breadcrumb-nav">
             <ol class="breadcrumb">
