--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 
                   <div class="flip-card-front">
                     <figure>
-                      <img src="assets/images/minland.webp" alt="minland">
+                      <img src="assets/images/minland.png" alt="minland">
                     </figure>
+                    <p>Minland</p>
                   </div>
                   <div class="flip-card-back">
                     <h4 class="title">Minland</h4>
@@ -131,8 +132,9 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <figure>
-                      <img src="assets/images/freezone.jpg" alt="minland">
+                      <img src="assets/images/freezone.png" alt="minland">
                     </figure>
+                    <p>Freezone</p>
                   </div>
                   <div class="flip-card-back">
                     <h4 class="title">Freezone</h4>
@@ -154,8 +156,9 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <figure>
-                      <img src="assets/images/offshore.jpg" alt="minland">
+                      <img src="assets/images/offshore.png" alt="minland">
                     </figure>
+                    <p>Offshore</p>
                   </div>
                   <div class="flip-card-back">
                     <h4 class="title">Offshore</h4>
@@ -420,6 +423,10 @@
             </div>
           </div>
         </div>
+        <a href="" class="btn btn-primary">
+          <span>View All</span>
+          <span class="arrow"></span>
+        </a>
       </div>
     </section>
 
@@ -550,14 +557,14 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                  <span>California, TX 70240</span>
+                  <span>xxx x xxx xx xxxxxxxxxx</span>
                 <li>
                   <strong>Email</strong>
-                  <a href="mailto:">support@createbiz.com</a>
+                  <a href="mailto:jinto@create-biz.com">jinto@create-biz.com</a>
                 </li>
                 <li>
                   <strong>Contact</strong>
-                  <a href="tel:">+44-20-7328-4499</a>
+                  <a href="tel:+971555393936">+971555393936</a>
                 </li>
               </ul>
             </div>
