--- a/business-setup/freezone.html
+++ b/business-setup/freezone.html
@@ -67,6 +67,9 @@
 
     <!------------banner----------------->
     <section class="inner-banner">
+      <figure class="figure">
+        <img src="../assets/images/freezone-banner.png" alt="freezone-banner">
+      </figure>
         <div class="container">
           <!-- <nav aria-label="breadcrumb" class="breadcrumb-nav">
             <ol class="breadcrumb">
