--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,13 @@
 <body>
 
   <header class="main-header">
-    <div class="header-container h-100 d-flx flx-vcenter">
+    <div class="top-header">
+      <div class="header-container d-flex justify-content-end">
+        <a href="mailto:jinto@create-biz.com"><i class="fa-solid fa-envelope"></i>jinto@create-biz.com</a>
+        <a href="tel:+971555393936"><i class="fa-solid fa-phone"></i>+971555393936</a>
+      </div>
+    </div>
+    <div class="header-container d-flx flx-vcenter">
       <div class="logo">
         <a href="/">
           <img src="assets/images/CreateBiz.png" alt="">
@@ -42,14 +48,8 @@
             </li>
             <li><a href="affiliated-services.html">Affiliated Services</a></li>
             <li><a href="about-us.html">About</a></li>
-            <li><a href="">Resources</a>
-              <ul>
-                <li><a href="blog.html">Blog</a>
-
-                </li>
-                <li><a href="faq.html">FAQ</a></li>
-
-              </ul>
+            <li><a href="blog.html">Blog</a>
+             
             </li>
 
             <li><a href="contact.html">Contact</a></li>
@@ -68,6 +68,9 @@
 
   <main class="contact-page">
     <section class="inner-banner">
+      <figure class="figure">
+        <img src="assets/images/contact.png" alt="contact">
+      </figure>
         <div class="container">
           <h1 class="ttl ttl-40 title"> Assisting Hassle-free Business Consultancy Services 
         </h1>
@@ -128,8 +131,7 @@
                             <div class="info">
                             <strong>
                                 Location</strong>
-                                <p>22 Baker Street, London,<br>
-                                    United Kingdom, W1U 3BW</p>
+                                <p>xxx xx x x x xxxxxxxx</p>
                             </div>
                         </div>
                         <div class="item">
