--- a/about-us.html
+++ b/about-us.html
@@ -206,7 +206,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="card">
-              <div class="pill"></div>
+              <div class="pill"><i class="fa-brands fa-linkedin-in"></i></div>
               <figure>
                 <img src="" alt="">
               </figure>
@@ -216,7 +216,7 @@
           </div>
           <div class="col-lg-4">
             <div class="card">
-              <div class="pill"></div>
+              <div class="pill"><i class="fa-brands fa-linkedin-in"></i></div>
               <figure>
                 <img src="" alt="">
               </figure>
@@ -226,7 +226,7 @@
           </div>
           <div class="col-lg-4">
             <div class="card">
-              <div class="pill"></div>
+              <div class="pill"><i class="fa-brands fa-linkedin-in"></i></div>
               <figure>
                 <img src="" alt="">
               </figure>
