--- a/business-setup/offshore.html
+++ b/business-setup/offshore.html
@@ -11,6 +11,7 @@
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="stylesheet" href="../assets/css/font/fontawesome.min.css">
   <link rel="stylesheet" href="../assets/css/main.min.css">
+  <link rel="stylesheet" href="../assets/css/icons.css">
   <link rel="stylesheet" href="../assets/css/pages/inner-pages.css">
   <!-- plugins -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
@@ -160,6 +161,7 @@
        <div class="row">
          <div class="col-lg-4">
            <div class="card">
+            <span class="icon-user"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -168,6 +170,7 @@
            </div>
          </div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-open"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -175,6 +178,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-trends"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -182,6 +186,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-user"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -189,6 +194,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-open"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -196,6 +202,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-trends"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -213,24 +220,28 @@
           <div class="row">
             <div class="col-lg-3">
               <div class="card">
+                <span class="icon-user"></span>
                   <p>Extensive Business
                     Opportunities</p>
               </div>
             </div>
             <div class="col-lg-3">
               <div class="card">
+                <span class="icon-user"></span>
                 <p>Extensive Business
                   Opportunities</p>
               </div>
             </div>
             <div class="col-lg-3">
               <div class="card">
+                <span class="icon-user"></span>
                 <p>Extensive Business
                   Opportunities</p>
               </div>
             </div>
             <div class="col-lg-3">
               <div class="card">
+                <span class="icon-user"></span>
                 <p>Extensive Business
                   Opportunities</p>
               </div>
