--- a/business-setup/freezone.html
+++ b/business-setup/freezone.html
@@ -11,6 +11,7 @@
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="stylesheet" href="../assets/css/font/fontawesome.min.css">
   <link rel="stylesheet" href="../assets/css/main.min.css">
+  <link rel="stylesheet" href="../assets/css/icons.css">
   <link rel="stylesheet" href="../assets/css/pages/inner-pages.css">
   <!-- plugins -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
@@ -360,24 +361,29 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="card">
+            <span class="icon-user"></span>
               <p>Extensive Business
                 Opportunities</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card">
+            <span class="icon-user"></span>
             <p>Extensive Business
               Opportunities</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card">
+            <span class="icon-user"></span>
             <p>Extensive Business
               Opportunities</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="card">
+            <span class="icon-user"></span>
+
             <p>Extensive Business
               Opportunities</p>
           </div>
@@ -559,7 +565,7 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                  <span>California, TX 70240</span>
+                  <span>xxx xxxx x xxxx</span>
                 <li>
                   <strong>Email</strong>
                   <a href="mailto:">support@createbiz.com</a>
