--- a/business-setup/minland.html
+++ b/business-setup/minland.html
@@ -11,6 +11,7 @@
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="stylesheet" href="../assets/css/font/fontawesome.min.css">
   <link rel="stylesheet" href="../assets/css/main.min.css">
+  <link rel="stylesheet" href="../assets/css/icons.css">
   <link rel="stylesheet" href="../assets/css/pages/inner-pages.css">
   <!-- plugins -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
@@ -158,6 +159,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="card">
+              <span class="icon"></span>
               <strong>Extensive Business Opportunities</strong>
               <p>Mainland companies can trade
                 everywhere in the UAE. Access to a
